--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </script>
 </head>
 <body style="text-align: center; font-family: Arial, sans-serif; padding: 20px;">
-    <h2>YouTube URL to .url Generator</h2>
+    <h2>Link to URL Generator</h2>
     <input type="text" id="urlInput" placeholder="Enter any URL" style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
     <input type="text" id="fileNameInput" placeholder="Enter file name (optional)" style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
     <button onclick="downloadURLFile()" style="padding: 10px; margin-left: 0px;">Download .url</button>
