--- a/index.html
+++ b/index.html
@@ -1,80 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Link to URL Generator</title>
+    <title>Link to URL File Generator</title>
     <script>
-        async function isValidURL(url) {
+        function isValidURL(url) {
             try {
                 new URL(url);
                 return true;
-            } catch (_) {
+            } catch {
                 return false;
             }
         }
 
-        async function getYouTubeVideoTitle(url) {
-            const videoId = extractYouTubeVideoId(url);
-            if (!videoId) {
-                return null;
-            }
-
-            try {
-                const response = await fetch(`https://www.youtube.com/oembed?url=https://www.youtube.com/watch?v=${videoId}&format=json`);
-                const data = await response.json();
-                return data.title;
-            } catch (error) {
-                console.error("Error fetching YouTube title:", error);
-                return null;
-            }
-        }
-
-        function extractYouTubeVideoId(url) {
-            const regExp = /^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#&?]*).*/;
-            const match = url.match(regExp);
-            return (match && match[7].length == 11) ? match[7] : false;
-        }
-
-        async function downloadURLFile() {
+        function downloadURLFile() {
             let url = document.getElementById("urlInput").value.trim();
             let fileName = document.getElementById("fileNameInput").value.trim();
 
-            if (!await isValidURL(url)) {
+            // Validate URL
+            if (!isValidURL(url)) {
                 alert("Please enter a valid URL.");
                 return;
             }
 
+            // Set default filename if empty
             if (!fileName) {
-                fileName = "link-to-url"; // Default filename
+                fileName = "link-to-url";
             }
 
-            fileName = fileName.replace(/[^a-zA-Z0-9_-]/g, ""); // Sanitize filename
+            // Clean filename
+            fileName.trim().replace(/\s+/g, " ");
 
-            if (url.includes("youtube.com")) {
-                const videoTitle = await getYouTubeVideoTitle(url);
-                if (videoTitle) {
-                    fileName = videoTitle.replace(/[^a-zA-Z0-9_-]/g, ""); // Sanitize title for filename
-                }
-            }
-
+            // Create file content
             let content = `[InternetShortcut]\nURL=${url}`;
             let blob = new Blob([content], { type: "text/plain" });
+
+            // Create and trigger download
             let a = document.createElement("a");
             a.href = URL.createObjectURL(blob);
             a.download = `${fileName}.url`;
             document.body.appendChild(a);
             a.click();
             document.body.removeChild(a);
-
-            alert("Download complete!");
         }
     </script>
 </head>
+
 <body style="text-align: center; font-family: Arial, sans-serif; padding: 20px;">
-    <h2>Link to URL Generator</h2>
-    <input type="text" id="urlInput" placeholder="Enter any URL" style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
-    <input type="text" id="fileNameInput" placeholder="Enter file name (optional)" style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
-    <button onclick="downloadURLFile()" style="padding: 10px; margin-left: 0px;">Download .url</button>
+    <h2>Link to URL File Generator</h2>
+    <input type="text" id="urlInput" placeholder="Enter any URL"
+        style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
+    <input type="text" id="fileNameInput" placeholder="Enter file name (optional)"
+        style="width: 60%; padding: 8px; margin-bottom: 10px;"><br>
+    <button onclick="downloadURLFile()" style="padding: 10px;">Download .url</button>
 </body>
+
 </html>
